infrastructure/ansible/files/manifests/gameland/gameland-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameland
  namespace: gameland
spec:
  selector:
    app: gameland
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
