infrastructure/ansible/files/manifests/gameland/gameland-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameland
  namespace: gameland
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: gameland
