infrastructure/ansible/files/manifests/gameland/gameland.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gameland
  labels:
    prometheus: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameland
  namespace: gameland
  labels:
    app: gameland
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameland
  template:
    metadata:
      labels:
        app: gameland
    spec:
      nodeSelector:
        role: worker-app
      containers:
        - name: gameland
          image: arailler/gameland:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: gameland
  namespace: gameland
spec:
  selector:
    app: gameland
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
