infrastructure/ansible/files/manifests/gameland/gameland-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameland-ingress
  namespace: gameland
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gameland(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gameland
                port:
                  number: 80
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 80
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
