infrastructure/ansible/files/manifests/gameland/gameland-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameland-nginx-ingress
  namespace: gameland
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gameland
            pathType: Prefix
            backend:
              service:
                name: gameland
                port:
                  number: 80
