infrastructure/ansible/files/manifests/gameland/gameland-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameland-traefik-ingress
  namespace: gameland
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
        - path: /gameland
          pathType: Prefix
          backend:
            service:
              name: gameland
              port:
                number: 80
